examples/fail/invalid_token.uplp
-- test: error { "category": "Parse.invalid_token", "metadata": { "loc": 0 } }
~